--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f7f7f7;
     color: #333;
+    padding: 20px;
 }
 
 .titulo-lanchonete {
@@ -129,3 +130,4 @@ h2 {
 .btn-limpar:hover {
     background-color: #b91c1c; 
 }
+
